Fixed background of about page on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,16 +565,17 @@ h6 {
 
 .about-page {
   margin-top: 5vh;
-  height: 100%;
+  height: auto;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
 }
 .about-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 40px;
 }
 
 #about-title {
